# vyatta-radius

./: AUTHORS  Makefile.am  README  README.md  configure.ac
certs/: .gitignore  ca-key.pem  ca.pem  index.txt  make.sh  openssl.cnf  server.pem
debian/: README  changelog  control  copyright  rules
dicts/: dictionary
http/: authorize.cgi  index.php  lighttpd.conf  style.css
scripts/: vyatta-hlr_auc_gw.pl  vyatta-hostapd-radius.pl  vyatta-lighttpd-portal.pl  vyatta-radius-info.pl  vyatta-radius.pl
templates-cfg/service/radius/: node.def
templates-cfg/service/radius/access/: node.def
templates-cfg/service/radius/client/: node.def
templates-cfg/service/radius/http-portal/: node.def
templates-cfg/service/radius/identity/: node.def
templates-cfg/service/radius/identity/ca-certificate/: node.def
templates-cfg/service/radius/identity/certificate/: node.def
templates-cfg/service/radius/identity/name/: node.def
templates-cfg/service/radius/identity/private-key/: node.def
templates-cfg/service/radius/interface/: node.def
templates-cfg/service/radius/user/: node.def
templates-cfg/service/radius/user/local/: node.def
templates-cfg/service/radius/user/sim/: node.def
templates-op/add/radius/: node.def
templates-op/add/radius/user/: node.def
templates-op/add/radius/user/node.tag/: node.def
templates-op/delete/radius/: node.def
templates-op/delete/radius/user/node.tag/: node.def
templates-op/restart/radius/: node.def
templates-op/show/radius/: node.def
templates-op/show/radius/users/: node.def
(+34 files in other folders)
